--- a/src/Nav.css
+++ b/src/Nav.css
@@ -1,4 +1,4 @@
-.navBar ul {
+/* .navBar ul {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -8,4 +8,4 @@
   margin: 20px;
   font-size: 24px;
   list-style-type: none;
-}
+} */
